This is the ChangeLog of the clone project

Created by Dr. Rolf Jansen on 2013-02-19.
Copyright (c) 2013. All rights reserved.

Note: Milestones are embraced with ••••


2014-07-24 17:35  rj - r59

   * clone.c
     - make sure not to create by accident a FS tree on the wrong device.
     - release of version 1.0.6b.


•••• 2014-07-20 -- Created a snapshot of r58 for release as v1.0.5, stored it on Google Drive and submitted it to FreeBSD Ports ••••


2014-07-20 16:43  rj - r58

   * clone.c, clone.1
     - release of version 1.0.5 (r58).

2014-07-19 23:24  rj - r57

   * clone.c
     - only call removeFSName() if the respective table is not nil.

2014-07-19 22:57  rj - r56

   * clone.c
     - in synchronization mode don't delete excluded items from the destination.
     - if in total only 1 item is copied then use singular in the final statistics message.

2014-07-17 20:42  rj - r55

   * clone.c
     - implemented static inline pthread_cond_wait_flag().
     - directory attributes are now set at the end of clone() and not after the call to clone().

2014-07-16 21:02  rj - r54

   * clone.c, clone.1
     - improved -v1 option description in usage() and in the man file.

2014-07-16 10:58  rj - r53

   * clone.c, clone.1
     - added verbosity level 2 for indicating cloned files by a '.'.
     - now level 3 displays the names of all cloned file system items.

2014-07-15 21:51  rj - r52

   * clone.c, utils.h, utils.c
     - optimized ACL reading.
     - utilize open file descriptors for meta data cloning.

2014-07-12 20:00  rj - r51

   * utils.c
     - ACLs ought to be freed using acl_free() instead of free().

2014-07-12 18:15  rj - r50

   * clone.c, utils.h, utils.c
     - in case of FreeBSD transfer only non-trivial ACLs in getMetaData().
     - fix some static analyzer warnings in the key-name/value store.
     - some formatting.
     - set version to 1.0.5b.

